particle disappear mechnism

--- a/FluidCS11/FluidCS11_2017_Win10.vcxproj
+++ b/FluidCS11/FluidCS11_2017_Win10.vcxproj
@@ -386,9 +386,12 @@
     <CLInclude Include="WaitDlg.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="ComputeShaderSort11.hlsl" />
-    <None Include="FluidCS11.hlsl" />
-    <None Include="FluidRender.fx" />
+    <None Include="ComputeShaderSort11.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </None>
+    <None Include="FluidRender.fx">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <CLInclude Include="resource.h" />
@@ -403,6 +406,12 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <FxCompile Include="FluidCS11.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </FxCompile>
+    <FxCompile Include="FluidRender.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </FxCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
