add mesh disintegrate process

--- a/FluidCS11/FluidCS11_2017_Win10.vcxproj.filters
+++ b/FluidCS11/FluidCS11_2017_Win10.vcxproj.filters
@@ -42,5 +42,8 @@
     <FxCompile Include="FluidCS11.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="DDSWithoutD3DX.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
